2006-11-28  Srinivasa Ragavan  <sragavan@novell.com>

	Added support to print/preview from Calendar Editor.

	* gui/dialogs/comp-editor.c: (menu_file_print_cb),
	(menu_file_print_preview_cb):

2006-11-28  Daniel Gryniewicz <dang@gentoo.org>

	** Fix for bug #349966

	* gui/apps_evolution_calendar.schemas.in.in:
	* gui/calendar-config-keys.h:
	* gui/dialogs/alarm-dialog.c: (action_selection_done_cb):

2006-11-20  Carlos Garcia Campos  <carlosgc@gnome.org>
	
	Fixes bug #367183
	* gui/e-cal-model.c: (e_cal_model_set_instance_times): Make end_time a
	valid date for all day events when ical file doesn't provide neither
	DTEND nor DURATION for such events. 

2006-11-15  Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/gnome-cal.c: (client_cal_opened_cb),
	(default_client_cal_opened_cb): Diplay a warning
	if calendar fails to open.

2006-11-14  Harish Krishnaswamy  <kharish@novell.com>

	* gui/gnome-cal.c: (gnome_calendar_destroy):
	Disconnect signal handlers before gcal is destroyed.
	Fixes #208959 (bugzilla.novell.com).

2006-11-07  Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/alarm-notify/alarm-notify.c: (list_changed_cb),
	(load_calendars), (cal_opened_cb), (alarm_notify_add_calendar):
	* gui/dialogs/cal-prefs-dialog.c: (alarms_selection_changed):
	Disable alarms for subscribed exchange calendars.
	Fixes #208318 (bugzilla.novell.com)

2006-11-06  Chenthill Palanisamy  <pchenthill@novell.com>

	Committing for Ben Gamari <bgamari@gmail.com>

	* recurrence-page.c: Correct recurrence editor default behavior.
	Fixes #354875 

2006-10-16  Kjartan Maraas  <kmaraas@gnome.org>

	* gui/cal-search-bar.c: (notify_e_cal_view_contains),
	(regen_query), (generate_viewoption_menu), (make_suboptions):
	Add missing header, #if 0 out some unused code, copy and free
	some data to avoid warnings.
	* gui/dialogs/cal-attachment-select-file.c: (run_selector):
	* gui/dialogs/comp-editor.c: (fill_widgets):
	* gui/dialogs/delete-comp.c: (prompt_retract_dialog):
	Typecasting fixes.